# blockchian_cripto

./: LICENSE  README.md
basic_rust/: README.md
basic_rust/platzi-rust/: Cargo.toml
basic_rust/platzi-rust/src/: array.rs  form.rs  function.rs  main.rs  pildora.rs  suma.rs
desarrolloRust/: README.md
desarrolloRust/rust-near/: Cargo.toml  README.deploy.md
desarrolloRust/rust-near/src/: lib.rs
desarrolloRust/rust-pong/: Cargo.toml
desarrolloRust/rust-pong/source/: build.sh
desarrolloRust/rust-pong/source/web/: index.html
desarrolloRust/rust-pong/src/: lib.rs  pong.rs
desarrolloRust/rust-wasm/: Cargo.toml  index.html
desarrolloRust/rust-wasm/src/: lib.rs
desarrolloRust/rust_block-main/: README.edit_blockchain.md  README.near.md
